{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 20,
  "lineage": "4d0b0784-5168-d992-32eb-1f5e77e549f9",
  "resources": [
    {
      "module": "module.EDMS-Prod",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:vpc/vpc-0ccfaa5f00d74cc63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ffa8e5fa04f64c00",
            "default_route_table_id": "rtb-0c2a96d1060fbb241",
            "default_security_group_id": "sg-048e5ca949ef8d3fd",
            "dhcp_options_id": "dopt-09be669142ca74cfc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ccfaa5f00d74cc63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2a96d1060fbb241",
            "owner_id": "783435133332",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.EDMS-Prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:783435133332:instance/i-002767303985deefc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002767303985deefc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-EDMS-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0123845606588d3a2"
              }
            ],
            "primary_network_interface_id": "eni-0123845606588d3a2",
            "private_dns": "ip-172-31-43-70.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.70",
            "public_dns": "ec2-13-206-123-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.123.72",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089bd44bcb78e1b6b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-EDMS-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065adb1c4c622691e",
            "tags": {
              "Name": "prod-EDMS-APP"
            },
            "tags_all": {
              "Name": "prod-EDMS-APP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0216c4326d0ace358"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "i-002767303985deefc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-Prod.aws_default_vpc.default",
            "module.EDMS-Prod.aws_key_pair.my_key",
            "module.EDMS-Prod.aws_security_group.my_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:783435133332:instance/i-05c8c8ce5c1ff768c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c8c8ce5c1ff768c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-EDMS-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0122850982d06279c"
              }
            ],
            "primary_network_interface_id": "eni-0122850982d06279c",
            "private_dns": "ip-172-31-32-206.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.206",
            "public_dns": "ec2-3-109-48-177.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.48.177",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a86fed6a729757c0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-EDMS-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065adb1c4c622691e",
            "tags": {
              "Name": "prod-EDMS-APP"
            },
            "tags_all": {
              "Name": "prod-EDMS-APP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0216c4326d0ace358"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "i-05c8c8ce5c1ff768c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-Prod.aws_default_vpc.default",
            "module.EDMS-Prod.aws_key_pair.my_key",
            "module.EDMS-Prod.aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "module": "module.EDMS-Prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:security-group/sg-0216c4326d0ace358",
            "description": "This is for access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0216c4326d0ace358",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-EDMS-SG",
            "name_prefix": "",
            "owner_id": "783435133332",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-EDMS-SG"
            },
            "tags_all": {
              "Name": "prod-EDMS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccfaa5f00d74cc63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "sg-0216c4326d0ace358",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-Prod.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.EDMS-Stage",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:vpc/vpc-0ccfaa5f00d74cc63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ffa8e5fa04f64c00",
            "default_route_table_id": "rtb-0c2a96d1060fbb241",
            "default_security_group_id": "sg-048e5ca949ef8d3fd",
            "dhcp_options_id": "dopt-09be669142ca74cfc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ccfaa5f00d74cc63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2a96d1060fbb241",
            "owner_id": "783435133332",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.EDMS-Stage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:783435133332:instance/i-0a742f143bd4b1a64",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a742f143bd4b1a64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "stage-EDMS-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c267a3d4f41a382e"
              }
            ],
            "primary_network_interface_id": "eni-0c267a3d4f41a382e",
            "private_dns": "ip-172-31-34-211.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.211",
            "public_dns": "ec2-43-205-136-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.136.181",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe4c1b87fa320b74",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stage-EDMS-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065adb1c4c622691e",
            "tags": {
              "Name": "stage-EDMS-APP"
            },
            "tags_all": {
              "Name": "stage-EDMS-APP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ff9215f3ffa7020"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "i-0a742f143bd4b1a64",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-Stage.aws_default_vpc.default",
            "module.EDMS-Stage.aws_key_pair.my_key",
            "module.EDMS-Stage.aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "module": "module.EDMS-Stage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:security-group/sg-03ff9215f3ffa7020",
            "description": "This is for access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ff9215f3ffa7020",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stage-EDMS-SG",
            "name_prefix": "",
            "owner_id": "783435133332",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-EDMS-SG"
            },
            "tags_all": {
              "Name": "stage-EDMS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccfaa5f00d74cc63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "sg-03ff9215f3ffa7020",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-Stage.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.EDMS-dev",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:vpc/vpc-0ccfaa5f00d74cc63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ffa8e5fa04f64c00",
            "default_route_table_id": "rtb-0c2a96d1060fbb241",
            "default_security_group_id": "sg-048e5ca949ef8d3fd",
            "dhcp_options_id": "dopt-09be669142ca74cfc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ccfaa5f00d74cc63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2a96d1060fbb241",
            "owner_id": "783435133332",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.EDMS-dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05d2d839d4f73aafb",
            "arn": "arn:aws:ec2:ap-south-1:783435133332:instance/i-06f08098535df5e2a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f08098535df5e2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "dev-EDMS-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02d8b7548b6cfbfb2"
              }
            ],
            "primary_network_interface_id": "eni-02d8b7548b6cfbfb2",
            "private_dns": "ip-172-31-38-230.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.230",
            "public_dns": "ec2-52-66-206-141.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.206.141",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5c88f43508a5f44",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-EDMS-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065adb1c4c622691e",
            "tags": {
              "Name": "dev-EDMS-APP"
            },
            "tags_all": {
              "Name": "dev-EDMS-APP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063731da685189a09"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "i-06f08098535df5e2a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-dev.aws_default_vpc.default",
            "module.EDMS-dev.aws_key_pair.my_key",
            "module.EDMS-dev.aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "module": "module.EDMS-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783435133332:security-group/sg-063731da685189a09",
            "description": "This is for access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063731da685189a09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-EDMS-SG",
            "name_prefix": "",
            "owner_id": "783435133332",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-EDMS-SG"
            },
            "tags_all": {
              "Name": "dev-EDMS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccfaa5f00d74cc63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "783435133332",
            "id": "sg-063731da685189a09",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.EDMS-dev.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}